# chargpt

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
balanced-sampler/: setup.py
balanced-sampler/balanced-sampler/src/data/: balanced_data_sampler.py  balanced_dataloader.py  balanced_dataset.py
chargpt/: .pre-commit-config.yaml  README.md  building_attention.py  components.py  dataset.py  evaluate_model.py  hooks.py  main.py  model.py  pyproject.toml  tokenizer.py  train.py  visualising_position_embedding.ipynb
chargpt/config/: config.yaml
chargpt/config/data/: shakespeare.yaml
chargpt/config/experiment/: short.yaml
chargpt/config/experiments/position_embeddings/: learned_embedding_micro.yaml  learned_embedding_small.yaml  sin_cos_embedding_micro.yaml  sin_cos_embedding_small.yaml
chargpt/config/experiments/size/: medium.yaml
chargpt/config/model/: gpt_medium.yaml  gpt_medium_sin_cos.yaml  gpt_micro.yaml  gpt_micro_sin_cos.yaml  gpt_small.yaml  gpt_small_sin_cos.yaml
chargpt/config/optimizer/: adamw.yaml
mlruns/0/: meta.yaml
test/: components.py
