[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "chargpt"
version = "0.0.0"
description = "A very basic character level Transformer repo for testing and learning."
authors = ["rogermilroy <roger@milroy.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
numpy = "^1.24.2"
tqdm = "^4.65.0"
hydra-core = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
